Fix Files.writeString() Java 11 incompatibility in generated DpRuntime
Replace Files.writeString(path, str, charset, options...) with the Java 8
compatible Files.write(path, bytes, options...) in the recordFailed method.
This mirrors the earlier isBlank()->trim().isEmpty() fix and ensures the
generated DpRuntime.java compiles when the target project uses -source 8
(e.g. LibGDX, Hudi). Update baseline DpRuntime.java to keep regression test in sync.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016mPvNLJjprvFmwahfGYkq7